Fix spacing for CAPP Agile Learning logo on mobile (#1806)

--- a/source/stylesheets/pages/_capp-agile-learning.scss
+++ b/source/stylesheets/pages/_capp-agile-learning.scss
@@ -14,7 +14,7 @@ body.capp-agile-learning {
     }
 
     .hero-inner {
-      padding: 3em 1em 2em;
+      padding: em($header-height) + 3em 1em 2em;
       position: relative;
 
       @include media($large-up) {
